# person-detection-PyQt-yolo

./: .gitignore  DEVELOPMENT.md  Db_handler.py  LICENSE  MIGRATION.md  README.md  base copy.py  bot_info.py  person_dt.db  pyproject.toml  pyqt_main.py  pyqt_main_deprecated.py  requirements.txt  run.py  setup.py
src/person_detection/: __init__.py  main.py
src/person_detection/core/: __init__.py  config.py  models.py
src/person_detection/database/: __init__.py  handler.py
src/person_detection/detection/: __init__.py  camera.py  detector.py
src/person_detection/telegram/: __init__.py  bot.py
src/person_detection/ui/: __init__.py  main_window.py  video_thread.py
